2011-06-26  Young Han Lee  <joybro@company100.net>

Reviewed by Dirk Schulze.

        SVGAnimation - keyTime value 1 never get animated
        https://bugs.webkit.org/show_bug.cgi?id=63230

        According to the SMIL 3.0 specification, the index of the keyTimes should be
        determined under the end-point-exclusive rule (e.g. Given keyTimes(0;0.5;1)
        and t=0.5, the current index of the keyTimes have to be 1 not 0).
        http://www.w3.org/TR/SMIL3/smil-animation.html#animationNS-InterpolationExamplesAdvanced

        * svg/animations/animate-number-calcMode-discrete-keyTimes-expected.txt: Added.
        * svg/animations/animate-number-calcMode-discrete-keyTimes.html: Added.
        * svg/animations/script-tests/animate-number-calcMode-discrete-keyTimes.js: Added.
        (sample1):
        (sample2):
        (sample3):
        (executeTest):
2011-06-26  Young Han Lee  <joybro@company100.net>

        Reviewed by Dirk Schulze.

        SVGAnimation - keyTime value 1 never get animated
        https://bugs.webkit.org/show_bug.cgi?id=63230

        According to the SMIL 3.0 specification, the index of the keyTimes should be
        determined under the end-point-exclusive rule (e.g. Given keyTimes(0;0.5;1)
        and t=0.5, the current index of the keyTimes have to be 1 not 0).
        http://www.w3.org/TR/SMIL3/smil-animation.html#animationNS-InterpolationExamplesAdvanced

        Test: svg/animations/animate-number-calcMode-discrete-keyTimes.html

        * svg/SVGAnimationElement.cpp:
        (WebCore::SVGAnimationElement::calculateKeyTimesIndex):

Canonical link: https://commits.webkit.org/79070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89774 268f45cc-cd09-0410-ab3c-d52691b4dbfc